--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "joi": "^14.3.1",
     "morgan": "^1.10.0",
     "mssql": "^6.2.0",
     "passport": "^0.4.1",
